<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>no.dervis</groupId>
  <artifactId>terminal_games</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>

  <properties>
    <java.version>23</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.release>${java.version}</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.1</version>
    </dependency>
      <dependency>
          <groupId>com.jnape.palatable</groupId>
          <artifactId>lambda</artifactId>
          <version>5.5.0</version>
      </dependency>
  </dependencies>

  <build>
      <finalName>bitchess</finalName>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.11.0</version>
              <configuration>
                  <release>${java.version}</release>
                  <compilerArgs>--enable-preview</compilerArgs>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.0.0</version>
              <configuration>
                  <argLine>--enable-preview</argLine>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>exec-maven-plugin</artifactId>
              <version>3.1.0</version>
              <configuration>
                  <mainClass>no.dervis.terminal_games.terminal_chess.TerminalChess</mainClass>
              </configuration>
          </plugin>
      </plugins>
  </build>
</project>
